syntax = "proto3";

package proto;

message Point {
    double x = 1;
    double y = 2;
}

message Rgba {
    bool hasOpacity = 1;
    uint32 r = 2;
    uint32 g = 3;
    uint32 b = 4;
    double opacity = 5;
}

message Color {
    oneof data {
        bool isNone = 1;
        string name = 2;
        Rgba rgba = 3;
    }
}

message RenderSettings {
    double width = 1;
    double height = 2;
    double padding = 3;
    double line_width = 4;
    double stop_radius = 5;
    uint32 bus_label_font_size = 6;
    Point bus_label_offset = 7;
    uint32 stop_label_font_size = 8;
    Point stop_label_offset = 9;
    Color underlayer_color = 10;
    double underlayer_width = 11;
    repeated Color color_palette = 12;
}
